--- a/rundeck/files/project.properties
+++ b/rundeck/files/project.properties
@@ -1,4 +1,10 @@
-resources.source.1.config.args=-s -C "*"
+project.ssh-authentication=privateKey
+service.NodeExecutor.default.provider=jsch-ssh
+project.nodeCache.enabled=false
+project.nodeCache.delay=30
+project.ssh-keypath=/var/lib/rundeck/.ssh/id_rsa
+resources.source.1.config.argsQuoted=false
+resources.source.1.config.args="-s -C '*'"
 resources.source.1.config.file=/opt/rundeck/scripts/salt-gen-resource/SaltGenResource.py
 resources.source.1.config.format=resourceyaml
 resources.source.1.config.interpreter=sudo
